--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendário de Nomes 2025</title>
+    <title>Datas com Tê</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1>Calendário de Nomes 2025</h1>
-            <p class="subtitle">Clique em qualquer data para adicionar um nome e escolher cor</p>
+            <h1>Datas com Tê</h1>
+            <p class="subtitle">Clique em qualquer data para adicionar um nome</p>
         </header>
         <main class="calendar-grid" id="calendar-grid">
             <!-- Calendário gerado pelo JavaScript -->
