--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                         <input type="text" id="name-input" maxlength="50" placeholder="Digite o nome...">
                     </div>
                     <div class="form-group">
-                        <label for="color-input">Cor:</label>
-                        <input type="color" id="color-input" value="#26C485">
+                        <label>Cor:</label>
+                        <div id="color-options" class="color-options">
+                            <!-- Cores via JS -->
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -42,5 +44,3 @@
         </div>
     </div>
     <script src="app.js"></script>
-</body>
-</html>
