--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
             <h1>Datas com Tê</h1>
             <p class="subtitle">Clique em qualquer data para adicionar um nome</p>
         </header>
-        <main class="calendar-grid" id="calendar-grid">
-            <!-- Calendário gerado pelo JavaScript -->
-        </main>
-        <!-- Modal para entrada de dados -->
+        <main class="calendar-grid" id="calendar-grid"></main>
         <div class="modal hidden" id="modal">
             <div class="modal-overlay" id="modal-overlay"></div>
             <div class="modal-content">
@@ -30,9 +27,7 @@
                     </div>
                     <div class="form-group">
                         <label>Cor:</label>
-                        <div id="color-options" class="color-options">
-                            <!-- Cores via JS -->
-                        </div>
+                        <div id="color-options" class="color-options"></div>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -44,3 +39,5 @@
         </div>
     </div>
     <script src="app.js"></script>
+</body>
+</html>
